--- a/main.html
+++ b/main.html
@@ -6,8 +6,10 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-	<!-- the entire body must be written by student -->
+	<body style="height: 100vw; display: flex; justify-content: center; align-items: center;">
+    <div style="display: flex; justify-content: center; align-items: center;text-align: center; height: 200px;width: 200px;background-color: lightblue;border: 2px solid black;">
+    This is center
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
