--- a/main.html
+++ b/main.html
@@ -6,13 +6,14 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-	<body style="height: 100vw; display: flex; justify-content: center; align-items: center;">
-    <div style="display: flex; justify-content: center; align-items: center;text-align: center; height: 200px;width: 200px;background-color: lightblue;border: 2px solid black;">
-    This is center
+	<body style="height: 100vh; width: 100vw;">
+    <div>
+      <p>This is center</p>
     </div>
-    <script type="text/javascript" src="./script.js">
+		<script type="text/javascript" src="./script.js">
 </script>
+  </body>
+    
 
-</body>
 
 </html>
